apps/saleor/overlays/prod/patches/ingress-patch.yaml
# Ingress Patch - PROD
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kyeol-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:827913617839:certificate/PROD_CERT_ID
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    external-dns.alpha.kubernetes.io/hostname: origin-prod-kyeol.msp-g1.click
spec:
  ingressClassName: alb
  rules:
    - host: origin-prod-kyeol.msp-g1.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefront
                port:
                  number: 3000
